[project]
name = "catm-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "FumiHubCNS", email = "fendo@cns.s.u-tokyo.ac.jp" }
]
requires-python = ">=3.13"
dependencies = [
    "iminuit>=2.31.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "schemdraw>=0.20",
    "scipy>=1.16.0",
    "PySpice @ git+https://github.com/PySpice-org/PySpice.git",
    "networkx>=3.5",
]

[project.scripts]
catmview = "catm_lib.util.catmviewer:check_catm_view"
padview = "catm_lib.readoutpad.catm:check_pad_view"
generategif = "catm_lib.util.gifgenerator:generate_gif"
filecheck = "catm_lib.util.dataforming:check_raed_file_function"
checktrialpad = "catm_lib.simulator.trialpad:check_pad_configuration"
simtrack = "catm_lib.simulator.tracksimulation:execute_simulataion"
calcvset = "catm_lib.circuit.voltagesetting:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/catm_lib"]

[tool.hatch.metadata]
allow-direct-references = true
